Update pom for java8 / java7 interoperability